src/test/deca/codegen/valid/homemade/division_int_returns_0.deca
 // Description:
 //    do a division
 //
 // Results:
 //
 //
 // History:
 //    created 14/01/2020

 {
    println(1/2); // expect 0
 }