src/test/deca/codegen/invalid/homemade/divisionByZeroFloat.deca
// Description:
//    test error when division by zero
//
// Results:
//
//
// Historique:
//    cree le 13/01/2020

{
   print(1.0/0.0);
}